vgpu-license-server.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: vgpu
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: license-server
  namespace: vgpu
spec:
  selector:
    matchLabels:
      app: license-server
  replicas: 1
  template:
    metadata:
      labels:
        app: license-server
    spec:
      containers:
      - name: license-server
        image: collinwebdesigns/fastapi-dls
        ports:
        - name: https
          containerPort: 443
        command: ["uvicorn",
          "main:app",
          "--host", "0.0.0.0",
          "--port", "443",
          "--app-dir", "/app",
          "--proxy-headers",
          "--ssl-keyfile", "/app/cert/webserver.key",
          "--ssl-certfile", "/app/cert/webserver.crt"
          ]
        volumeMounts:
          - name: dls-db
            mountPath: /app/database
          - name: privkey
            mountPath: /app/cert/instance.private.pem
            subPath: instance.private.pem
          - name: pubkey
            mountPath: /app/cert/instance.public.pem
            subPath: instance.public.pem
          - name: webcrt
            mountPath: /app/cert/webserver.crt
            subPath: webserver.crt
          - name: webkey
            mountPath: /app/cert/webserver.key
            subPath: webserver.key
      volumes:
      - name: dls-db
        persistentVolumeClaim:
          claimName: vgpu-db-pvc
      - name: privkey
        configMap:
          name: privkey
          items:
            - key: instance.private.pem
              path: instance.private.pem
      - name: pubkey
        configMap:
          name: pubkey
          items:
            - key: instance.public.pem
              path: instance.public.pem
      - name: webkey
        configMap:
          name: webkey
          items:
            - key: webserver.key
              path: webserver.key
      - name: webcrt
        configMap:
          name: webcrt
          items:
            - key: webserver.crt
              path: webserver.crt
---
apiVersion: v1
kind: Service
metadata:
  name: license-server-service
  namespace: vgpu
spec:
  selector:
    app: license-server
  ports:
    - protocol: TCP
      port: 443
      targetPort: 443
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: license-server-ingress
  namespace: vgpu
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - vgpu.buildstars.online
      secretName: "vgpu-tls"
  rules:
  - host: vgpu.buildstars.online
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: license-server-service
            port:
              number: 443
